Fixing Overflow of Social Media Links (Footer Section)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -964,6 +964,7 @@ body {
 	margin-block-start: 20px;
 }
 
+
 .footer-bottom {
 	background-color: var(--black);
 	padding: 45px 60px;
@@ -982,30 +983,28 @@ body {
 	gap: 5px 15px;
 }
 
-.copyright {
-	text-align: center;
-}
+.copyright { text-align: center; }
 
 .social-list {
 	display: flex;
 	justify-content: center;
-	flex: wrap;
+	flex-wrap: wrap;
 	gap: 10px;
 }
 
 .social-link {
-	color: var(--white);
-	width: 60px;
-	height: 60px;
-	border: 1px solid var(--white_a30);
-	display: grid;
-	place-items: center;
-	transition: var(--transition-1);
+  color: var(--white);
+  width: 60px;
+  height: 60px;
+  border: 1px solid var(--white_a30);
+  display: grid;
+  place-items: center;
+  transition: var(--transition-1);
 }
 
 .social-link:is(:hover, :focus-visible) {
-	background-color: var(--yellow-green);
-	border-color: var(--yellow-green);
+  background-color: var(--yellow-green);
+  border-color: var(--yellow-green);
 }
 
 
@@ -1017,7 +1016,7 @@ body {
 .back-top-btn {
 	position: fixed;
 	bottom: 10px;
-	right: 20px;
+	right: 30px;
 	background-color: var(--yellow-green);
 	color: var(--white);
 	font-size: 2rem;
@@ -1026,6 +1025,7 @@ body {
 	border: 3px solid var(--white);
 	opacity: 0;
 	transition: var(--transition-1);
+	overflow: hidden;
 }
 
 .back-top-btn.active {
